Edited wiki page OpenEVSE_II through web user interface.

--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -19,7 +19,10 @@ The firmware used is the same OpenEVSE firmware. Be sure to compile the firmware
 Wiring is almost the same as traditional OpenEVSE. The only changes are the addition of an optional ammeter CT coil and the mezzanine cable connecting the two boards.
 
 [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_Wiring_Relay.png]
+The wiring for the relay variant
+
 [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_Wiring_Contactor.png]
+The wiring for the contactor variant
 
 On the HV + Relay board, there are two SPST relays (not unlike the OpenEVSE DIY 30A board). QD terminals crimped onto the power and J1772 hot leads connect to these two relays. The PCB connections on the relays provide AC power and relay test signals to the rest of the board. _Both_ J1772 hot lines must pass through the GFI coil, and then (optionally) _one_ of the hot lines must pass through the ammeter coil.
 
@@ -95,7 +98,7 @@ Feel free to follow along with the schematics (below). Each subsection here corr
 
 There are two DC/DC converters built around the venerable MC34063 chip, The one on the left is a buck topology to reduce the 12 volts input to 5 volts at up to 250 mA. The one on the right is an inverting topology to turn +12 volts into -12 volts at up to 50 mA. Since the only use for the -12 volts is the pilot generator, there's a 2.4 k-ohm resistor across it to provide a minimal load. This improves the efficiency and stability of the converter.
 
-The GFI is in three basic pieces. The first op-amp stage is a rectifying amplifier with a gain of 100 and a low-pass filter with a roll-off of 120 Hz (or so). It gets its input from the GFI current transformer. A current transformer outputs a current proportional to the current flowing on the conductor(s) passing through it. For a GFI, the two power supply conductors pass through it, and in a correct environment, all of the current flowing out through one of them should be balanced by the same amount of current flowing back through the other, for a net result of 0. If the current can find some other path to ground, the resulting imbalance will result in a current output from the CT. Immediately across the CT is a burden resistor. The burden resistor's job is ton convert the current into a voltage that can be measured. There is a zener diode clamp to protect the amplifier from excessive voltage swings in the case of massive imbalances. The output of the amplifier goes into a peak-hold capacitor and is then fed into a comparator. Whenever the held-peak exceeds the comparison voltage (calibrated for somewhat less than 20 mA, but not so much less to be a nuisance), it interrupts the controller.
+The GFI is in three basic pieces. The first op-amp stage is a rectifying amplifier with a gain of 100 and a low-pass filter with a roll-off of 120 Hz (or so). It gets its input from the GFI current transformer. A current transformer outputs a current proportional to the current flowing on the conductor(s) passing through it. For a GFI, the two power supply conductors pass through it, and in a correct environment, all of the current flowing out through one of them should be balanced by the same amount of current flowing back through the other, for a net result of 0. If the current can find some other path to ground, the resulting imbalance will result in a current output from the CT. Immediately across the CT is a burden resistor. The burden resistor's job is to convert the current into a voltage that can be measured. There is a zener diode clamp to protect the amplifier from excessive voltage swings in the case of massive imbalances. The output of the amplifier goes into a peak-hold capacitor and is then fed into a comparator. Whenever the held-peak exceeds the comparison voltage (calibrated for somewhat less than 20 mA, but not so much less to be a nuisance), it interrupts the controller.
 
 In addition, there's a GFI test circuit. This is merely a current limiting resistor. It's intended to be connected to a wire that takes 3 or 4 loops around and through the GFI coil and then connects to ground. The controller can test the GFI by pulsing this line with a 60 Hz square wave The multiple loops will serve to amplify the impact of the current flowing through the wire (each loop through represents another wire with the same current flowing through it), assuring that the GFI will trigger.
 
@@ -106,6 +109,8 @@ The ammeter consists of another current transformer. In this case, only a single
 The pilot generator is a set of four transistors in a modified half-H bridge configuration. The output is a pair of PNP and NPN transistors in a push-pull arrangement from +/- 12 volts. Each transistor has a pull-up or down resistor on its base intended - in the default case - to keep the transistor switched off.
 
 From each base there is a second complimentary transistor wired up to switch the final transistor on when the appropriate logic level is present on its input. On the high side, an NPN transistor will bring the PNP transistor's base to ground, causing it to turn on, but only when the first transistor's base is high. On the low side, a PNP transistor will bring the NPN transistor's base towards +5 volts, causing it to turn on, but only when the primary transistor's base is low. Finally, there is a pull-up resistor on the input to insure that there is always an unambiguous state present. When programming the controller, the pilot pin will be in a high impedance state. Without the pull-up, both transistors would wind up being on, shorting -12 to +12.
+
+On the output there is a 1k impedance setting resistor mandated by the spec. After that there is a sampling resistor network. It's intended to scale the +/-12 volts on the pilot line to 0-5 volts to present to an A/D pin on the controller. This allows the controller to sense the state requested by the car and insure the presence of the pilot diode in the vehicle.
 
 === Controller / display ===
 
